# WarpWiggle

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
include/: testlibraryfile
include/assets/maps/: 01.wwmap
include/assets/testfolder/: testfile2
src/: globalConstants.h  globalMacros.h  globalStructs.h  main.c  renderer.c  renderer.h  sdlInclude.h  snakeManager.c  snakeManager.h  textureManager.c  textureManager.h  windowManager.c  windowManager.h
src/map/: loader.c  loader.h
src/rendering/: fonts.c  fonts.h  renderer.c  renderer.h  snake.c  snake.h  tiles.c  tiles.h
